--- a/.gitattributes
+++ b/.gitattributes
@@ -33,8 +33,4 @@ saved_model/**/* filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.zst filter=lfs diff=lfs merge=lfs -text
 *tfevents* filter=lfs diff=lfs merge=lfs -text
-disaster_girl.jpg filter=lfs diff=lfs merge=lfs -text
-grumpy.png filter=lfs diff=lfs merge=lfs -text
-wednesday.png filter=lfs diff=lfs merge=lfs -text
-monkey.jpg filter=lfs diff=lfs merge=lfs -text
-tool_of_the_sea.png filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
